I just add some pictures and changed a lot of information about pizza.

--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -7,6 +7,29 @@
     <title>How to make pizza</title>
 </head>
 <body>
-    <h1>Pizza making guide!</h1>
+    <h1>How to make pepe-homemade pizza!!!!!!!</h1>
+    <img src="../img/pepepiz2.png" alt=""><br>
+    <p>DELICIOUS Homemade PizZa Buddy. Nothing can beat the original!</p>
+    <h3>Step by Step Process:</h3>
+    <h4>What's needed. . .</h4>
+    <ul>
+        <li>1/2 (12 ounce) can CONTADINA Tomato Paste</li>
+        <li>1 teaspoon dried oregano, crushed</li>
+        <li>1 teaspoon dried basil, crushed</li>
+        <li>1/2 teaspoon garlic powder</li>
+        <li>1/2 teaspoon onion powder</li>
+        <li>1/2 teaspoon sugar</li>
+        <li>1/2 teaspoon salt</li>
+        <li>1/4 teaspoon black pepper</li>
+        <li>Pinch of <h1>love</h1>. . .</li>
+    </ul>
+    <h3>Toppings. . .</h3>
+    <ul>
+        <li>1 (6 ounce) package HORMEL Pepperoni</li>
+        <li>1 cup shredded mozzarella chesse, or more to taste</li>
+        <li>Pinch of <h1>bAnAnAz</h1> (Optional)</li>
+    </ul>
+
+    <a href="../index.html">Back to homepage!</a>
 </body>
 </html>
