--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <h1>The Baking Banana</h1>
+    <img src="../odin_recipes/img/pepepiz.png" alt="Pepe Pizza"><br>
     <a href="../odin_recipes/recipes/pizza.html">Want to learn how to make pizza? 
         Click here!</a>
-
 </body>
 </html>
