I finished the page for pizza, made a secret link, and adjusted some syntax.

--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -9,7 +9,7 @@
 <body>
     <h1>How to make pepe-homemade pizza!!!!!!!</h1>
     <img src="../img/pepepiz2.png" alt=""><br>
-    <p>DELICIOUS Homemade PizZa Buddy. Nothing can beat the original!</p>
+    <em><p>DELICIOUS Homemade PizZa Buddy. Nothing can beat the original!</p></em>
     <h3>Step by Step Process:</h3>
     <h4>What's needed. . .</h4>
     <ul>
@@ -21,14 +21,47 @@
         <li>1/2 teaspoon sugar</li>
         <li>1/2 teaspoon salt</li>
         <li>1/4 teaspoon black pepper</li>
-        <li>Pinch of <h1>love</h1>. . .</li>
+        <li>Pinch of <em><h1>love</h1></em></li>
     </ul>
     <h3>Toppings. . .</h3>
     <ul>
         <li>1 (6 ounce) package HORMEL Pepperoni</li>
         <li>1 cup shredded mozzarella chesse, or more to taste</li>
-        <li>Pinch of <h1>bAnAnAz</h1> (Optional)</li>
+        <li>Pinch of <em><h1>bAnAnAz</h1></em>(Optional)</li>
     </ul>
+    <h3>Now we can start baking!</h3>
+    <ol>
+        <li><em><strong>Prepping the Sause</strong></em></li>
+        <p>For sause: Combine all sause ingredients with 1/2 cup water in a 
+            medium bowl; set aside for flavors to develop while making crust. 
+            Freeze remaining paste.
+        </p>
+        <li><em><strong>Prepping the Crust</strong></em></li>
+        <p>For crust: Combined 2 cups of flour with the dry yeast, sugar and salt. Add the 
+            water and oil and mix until well blended (about 1 min). Gradually add enough 
+            remaining flour slowly, until a soft, sticky dough ball is formed.
+        </p>
+        <li><em><strong>Waiting for the Crust</strong></em></li>
+        <p>Knead for about 4 minutes, on a floured surface, until dough is smooth and 
+            elastic. Add more flour, if needed. (If using RapidRise Yeast, let dough rest, 
+            covered, for 10 minutes.)
+        </p>
+        <li><em><strong>Setup for the Oven</strong></em></li>
+        <p>Divide dough in half. Pat each half (with floured hands) into a 12-inch greased
+            pizza pan OR roll dough to fit pans.
+        </p>
+        <p><strong>Optional: </strong><em>bAnAnAz</em>. . . It's only a prep-food. You gotta eat something big boy/girl!</p>
+        <li><em><strong>Cooking Process</strong></em></li>
+        <p>For pizzas; Preheat oven to 425 degrees F. Top crusts with sauce, pepperoni and 
+            chesse.
+        </p>
+        <li><em><strong>Wait time for a Complete Pepe-Pizza!</strong></em></li>
+        <p>Bake for 18 to  20 minutes until crusts are browned and chesse is bubbly. For best
+            results, rotate pizza pans between top and bottom oven racks halfway through 
+            baking.
+        </p>
+    </ol>
+
 
     <a href="../index.html">Back to homepage!</a>
 </body>
