--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Baking Banana</title>
+    <title>Bean Burrito Recipes</title>
 </head>
 <body>
-    <h1>The Baking Banana</h1>
+    <h1><em>The Bacon Bean Burrito Recipe Guides</em></h1>
     <img src="../odin_recipes/img/pepepiz.png" alt="Pepe Pizza"><br>
-    <a href="../odin_recipes/recipes/pizza.html">Want to learn how to make pizza? 
-        Click here!</a>
+    <a href="../odin_recipes/recipes/pizza.html"><h4>Want to learn how to make pizza? Click here!</h4></a>
+    <a href="../odin_recipes/recipes/dontouchthat.html">
+        <h6>DON'T CLICK THIS BUTTON!</h6></a>
 </body>
 </html>
