So, I added another recipe for banana bread and included 'back to top' button

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <h1><em>The Bacon Bean Burrito Recipe Guides</em></h1>
     <img src="../odin_recipes/img/pepepiz.png" alt="Pepe Pizza"><br>
     <a href="../odin_recipes/recipes/pizza.html"><h4>Want to learn how to make pizza? Click here!</h4></a>
+    <img src="../odin_recipes/img/BananaBreadHelp.jpg" alt="Bread Master">
+    <a href="../odin_recipes/recipes/banana.html"><h4>Want to learn how to make banana bread? Click here brotha!</h4></a>
     <a href="../odin_recipes/recipes/dontouchthat.html">
         <h6>DON'T CLICK THIS BUTTON!</h6></a>
 </body>
