--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -60,9 +60,9 @@
             results, rotate pizza pans between top and bottom oven racks halfway through 
             baking.
         </p>
+        <p>Credits to: <strong><a href="https://www.allrecipes.com/recipe/240376/homemade-pepperoni-pizza/">Contadina</a></strong> </p>
     </ol>
-
-
+    <a href="#top">Go back to top</a><br>
     <a href="../index.html">Back to homepage!</a>
 </body>
 </html>
