Added my last recipe. Some changes and may do some more later.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <a href="../odin_recipes/recipes/pizza.html"><h4>Want to learn how to make pizza? Click here!</h4></a>
     <img src="../odin_recipes/img/BananaBreadHelp.jpg" alt="Bread Master">
     <a href="../odin_recipes/recipes/banana.html"><h4>Want to learn how to make banana bread? Click here brotha!</h4></a>
+    <img src="../odin_recipes/img/wtfBanana.jpg" alt="Weird Banana Stuff"><br>
+    <a href="../odin_recipes/recipes/ppj.html"><h4>Want to try pp&j smoothie?? Weird right? Click here!</h4></a>
     <a href="../odin_recipes/recipes/dontouchthat.html">
         <h6>DON'T CLICK THIS BUTTON!</h6></a>
 </body>
