Added some CSS within the index file and changed the README note

--- a/index.html
+++ b/index.html
@@ -5,9 +5,43 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bean Burrito Recipes</title>
+    <style>
+        body{
+            background-color: black;
+        }
+
+        html, h1, img, a{
+            margin: 0;
+            padding: 0;
+        }
+
+        h1, h4, h6{
+            color: white;
+            font-family: monospace,'Times New Roman';
+        }
+
+        h1{
+            text-align: left;
+            background-color: rgb(221, 83, 83);
+            height: auto;
+            width: 205px;
+            position: relative; left: 400px; right: auto;
+        }
+
+        img{
+            position: relative; left: 380px; right: auto;
+            height: auto;
+            width: 250px;
+        }
+
+        a{
+            position: relative; left: 290px; right: auto;
+        }
+
+    </style>
 </head>
 <body>
-    <h1><em>The Bacon Bean Burrito Recipe Guides</em></h1>
+    <h1><em>The Bakery</em></h1>
     <img src="../odin_recipes/img/pepepiz.png" alt="Pepe Pizza"><br>
     <a href="../odin_recipes/recipes/pizza.html"><h4>Want to learn how to make pizza? Click here!</h4></a>
     <img src="../odin_recipes/img/BananaBreadHelp.jpg" alt="Bread Master">
